XMLtoCSV/objects/unpackaged/objects/PCYC_Account_Merge__c.object
<CustomObject>
    <description>PCYC Account Merge Staging table.</description>
    <fields>
        <fullName>PCYC_After_Merge_Data__c</fullName>
        <description>After Merge : Existing Account Data in JSON</description>
        <inlineHelpText>After merge existing account data in JSON.</inlineHelpText>
        <label>After Merge Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Before_Merge_Data__c</fullName>
        <description>Before Merge Existing Account Data in JSON</description>
        <inlineHelpText>Before merge existing account data in JSON.</inlineHelpText>
        <label>Before Merge Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Error_Message__c</fullName>
        <description>Merge Errors if any</description>
        <inlineHelpText>Errors if any during merge.</inlineHelpText>
        <label>Merge Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Existing_Veeva_Id__c</fullName>
        <description>Existing Veeva Id</description>
        <label>Existing Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Rejected_Merge_Data__c</fullName>
        <description>Rejected Merge Data</description>
        <inlineHelpText>before merge rejected account data in JSON, please note after merge rejected account is no longer present in salesforce.</inlineHelpText>
        <label>Rejected Merge Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Rejected_Veeva_Id__c</fullName>
        <description>Rejected Veeva Id</description>
        <label>Rejected Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Staging Account Merge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Existing_Veeva_Id__c</columns>
        <columns>PCYC_Rejected_Veeva_Id__c</columns>
        <columns>PCYC_Status__c</columns>
        <columns>PCYC_After_Merge_Data__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>PCYC_Error_Message__c</columns>
        <columns>PCYC_Existing_Veeva_Id__c</columns>
        <columns>PCYC_Rejected_Veeva_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Failed_Merges</label>
        <language>en_US</language>
        <sharedTo>
            <role>Corp</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>M{0}</displayFormat>
        <label>Merge #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Account Merges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>